[workspace]
members = [
  "antenna",
  "armor",
  "basic",
  "paint",
  "potion",
  "robot",
  "speakers",
  "my-first",
]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = "3"
cosmwasm-schema = "3"
cw-storage-plus = "3"
cw-multi-test = "3"
cw2 = "3"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
ciborium = "0.2"
ownable-std = "0.6.1"
ownable-std-macros = "0.6.1"

