[package]
name = "ownable"
description = "My First Ownable"
version = "0.1.0"
authors = ["EQTY <info@eqty.me>"]
edition = "2024"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
js-sys = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
ownable-std = { workspace = true }
ownable-std-macros = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
