[package]
name = "ownable-potion"
version = "0.2.1"
description = "Drink a colorful potion"
license = "MIT"
authors = ["bekauz <bekauz@protonmail.com>", "Arnold Daniels <arnold@jasny.net>"]
edition = "2024"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
backtraces = []
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ciborium = { workspace = true }
ownable-std = { workspace = true }
ownable-std-macros = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cosmwasm-schema = { workspace = true }
